--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "node": ">=6.13.0"
   },
   "scripts": {},
-  "dependencies": {},
+  "dependencies": {
+    "express": "^4.16.4",
+    "faker": "^4.1.0",
+    "mysql": "^2.16.0"
+  },
   "devDependencies": {
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor"
   }
