--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "faker": "^4.1.0",
-    "mysql": "^2.16.0"
+    "sqlite3": "^4.0.6"
   },
   "devDependencies": {
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor"
