--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "node": ">=6.13.0"
   },
   "scripts": {
-    "start": "nodemon server/app.js"
+    "start": "nodemon server/app.js",
+    "test": "jest --detectOpenHandles"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
@@ -17,6 +18,8 @@
     "sqlite3": "^4.0.6"
   },
   "devDependencies": {
-    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor"
+    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
+    "jest": "^24.1.0",
+    "supertest": "^3.4.2"
   }
 }
