--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "",
+  "name": "tripcounselor",
   "version": "",
   "description": "",
+  "main": "app.js",
   "author": "",
   "license": "",
   "engines": {
@@ -9,16 +10,29 @@
   },
   "scripts": {
     "start": "nodemon server/app.js",
-    "test": "jest --detectOpenHandles"
+    "test": "jest --detectOpenHandles",
+    "react-dev": "webpack -d --watch",
+    "server-dev": "nodemon server/app.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "express": "^4.16.4",
     "faker": "^4.1.0",
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1",
     "sqlite3": "^4.0.6"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
     "jest": "^24.1.0",
-    "supertest": "^3.4.2"
+    "supertest": "^3.4.2",
+    "webpack": "^4.29.3",
+    "webpack-cli": "^3.2.3"
   }
 }
