--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
+    "gulp": "^4.0.0",
+    "gulp-imagemin": "^5.0.3",
     "jest": "^24.1.0",
     "nodemon": "^1.18.10",
     "react-test-renderer": "^16.8.2",
