Write NPM build script for Webpack
Script builds minified bundle.js for production deployment.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "scripts": {
     "start": "node server/app.js",
+    "build": "webpack --mode \"production\"",
     "test": "jest --detectOpenHandles",
     "react-dev": "webpack -d --watch",
     "server-dev": "nodemon server/app.js"
