--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
     "gulp": "^4.0.0",
+    "gulp-clean-css": "^4.0.0",
     "gulp-imagemin": "^5.0.3",
     "jest": "^24.1.0",
     "nodemon": "^1.18.10",
